--- a/app/sass/theme/colors.scss
+++ b/app/sass/theme/colors.scss
@@ -4,6 +4,7 @@ $dark-blue:                             #0064cd;
 $green:                                 #87b848;
 $lime:                                  #beca68;
 $red:                                   #a52b1f;
+$light-red:                             #c22b1c;
 $yellow:                                #ffc40d;
 $orange:                                #f90;
 $dark-orange:                           #ae4901;
