--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,31 +1,45 @@
+@charset "UTF-8";
+/* Bitters 0.10.0
+ * http://bitters.bourbon.io
+ * Copyright 2013ÔÇô2014 thoughtbot, inc.
+ * MIT License */
 button,
 input[type="submit"] {
   -webkit-font-smoothing: antialiased;
-  background-color: #477dca;
-  border-radius: 0.1875em;
+  background-color: #477DCA;
+  border-radius: 3px;
   color: white;
   display: inline-block;
   font-size: 1em;
   font-weight: bold;
   line-height: 1;
-  padding: .75em 1em;
+  padding: 0.75em 1em;
   text-decoration: none; }
   button:hover,
   input[type="submit"]:hover {
     background-color: #2c5999;
     color: white; }
+  button:disabled,
+  input[type="submit"]:disabled {
+    cursor: not-allowed;
+    opacity: 0.5; }
 
 body {
   -webkit-font-smoothing: antialiased;
   background-color: white;
-  color: #333333;
+  color: #333;
   font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   font-size: 1em;
   line-height: 1.5; }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
-  line-height: 1.25em;
+  line-height: 1.25;
   margin: 0;
   text-rendering: optimizeLegibility; }
 
@@ -54,7 +68,7 @@ a {
   -webkit-transition: color 0.1s linear;
   -moz-transition: color 0.1s linear;
   transition: color 0.1s linear;
-  color: #477dca;
+  color: #477DCA;
   text-decoration: none; }
   a:hover {
     color: #2c5999; }
@@ -63,18 +77,19 @@ a {
     outline: none; }
 
 hr {
-  border-bottom: 1px solid #dddddd;
+  border-bottom: 1px solid #DDD;
   border-left: none;
   border-right: none;
   border-top: none;
   margin: 1.5em 0; }
 
-img {
+img,
+picture {
   margin: 0;
   max-width: 100%; }
 
 blockquote {
-  border-left: 2px solid #dddddd;
+  border-left: 2px solid #DDD;
   color: #595959;
   margin: 1.5em 0;
   padding-left: 0.75em; }
@@ -83,11 +98,11 @@ cite {
   color: #737373;
   font-style: italic; }
   cite:before {
-    content: '\2014 \00A0'; }
+    content: "\2014 \00A0"; }
 
 fieldset {
   background: #f7f7f7;
-  border: 1px solid #dddddd;
+  border: 1px solid #DDD;
   margin: 0 0 0.75em 0;
   padding: 1.5em; }
 
@@ -116,8 +131,8 @@ select[multiple=multiple] {
   -moz-transition: border-color;
   transition: border-color;
   background-color: white;
-  border-radius: 0.1875em;
-  border: 1px solid #dddddd;
+  border-radius: 3px;
+  border: 1px solid #DDD;
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.06);
   font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   font-size: 1em;
@@ -131,7 +146,7 @@ select[multiple=multiple] {
   textarea:focus,
   input[type="email"]:focus, input[type="number"]:focus, input[type="password"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="text"]:focus, input[type="url"]:focus, input[type="color"]:focus, input[type="date"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="month"]:focus, input[type="time"]:focus, input[type="week"]:focus,
   select[multiple=multiple]:focus {
-    border-color: #477dca;
+    border-color: #477DCA;
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.06), 0 0 5px rgba(55, 112, 192, 0.7);
     outline: none; }
 
@@ -145,19 +160,19 @@ input[type="search"] {
   -o-appearance: none;
   appearance: none; }
 
-input[type="checkbox"], input[type="radio"] {
+input[type="checkbox"],
+input[type="radio"] {
   display: inline;
   margin-right: 0.375em; }
 
 input[type="file"] {
-  margin-bottom: 0.75em;
-  padding-bottom: 0.5em;
+  padding-bottom: 0.75em;
   width: 100%; }
 
 select {
-  width: auto;
+  margin-bottom: 1.5em;
   max-width: 100%;
-  margin-bottom: 1.5em; }
+  width: auto; }
 
 table {
   border-collapse: collapse;
@@ -172,13 +187,16 @@ th {
   text-align: left; }
 
 td {
-  border-bottom: 1px solid #dddddd;
+  border-bottom: 1px solid #DDD;
   padding: 0.75em 0; }
 
-tr, td, th {
+tr,
+td,
+th {
   vertical-align: middle; }
 
-ul, ol {
+ul,
+ol {
   margin: 0;
   padding: 0;
   list-style-type: none; }
@@ -210,9 +228,9 @@ input[type="submit"] {
 
 .progress-bar {
   background-color: #f2f2f2;
-  border: 1px solid #dddddd;
+  border: 1px solid #DDD;
   box-shadow: inset 0 0 3px 0 rgba(115, 115, 115, 0.15);
-  border-radius: 0.1875em;
+  border-radius: 3px;
   height: 30px;
   margin: 0 auto;
   padding: 2px;
@@ -230,7 +248,7 @@ input[type="submit"] {
     background-size: 40px 40px;
     background-repeat: repeat-x;
     border: 1px solid #036690;
-    border-radius: 0.125em;
+    border-radius: 2px;
     display: block;
     height: 100%;
     width: 60%; }
@@ -238,31 +256,26 @@ input[type="submit"] {
 @-webkit-keyframes progress {
   0% {
     background-position: 0 0; }
-
   100% {
     background-position: 40px 0; } }
 @-moz-keyframes progress {
   0% {
     background-position: 0 0; }
-
   100% {
     background-position: 40px 0; } }
 @-ms-keyframes progress {
   0% {
     background-position: 0 0; }
-
   100% {
     background-position: 40px 0; } }
 @-o-keyframes progress {
   0% {
     background-position: 0 0; }
-
   100% {
     background-position: 40px 0; } }
 @keyframes progress {
   0% {
     background-position: 0 0; }
-
   100% {
     background-position: 40px 0; } }
 .radial-progress {
@@ -1249,7 +1262,7 @@ input[type="submit"] {
 body {
   margin: 0;
   background-color: #e6e6e6;
-  color: #333333; }
+  color: #333; }
   body h1,
   body h2,
   body h3,
@@ -1269,7 +1282,7 @@ div.layout {
     z-index: 10000; }
     div.layout > header .title,
     div.layout > header .search {
-      color: #dddddd;
+      color: #DDD;
       font-size: 2em;
       position: relative;
       float: left; }
@@ -1300,11 +1313,11 @@ div.layout {
         background: none;
         border: 0;
         box-shadow: none;
-        color: #dddddd;
+        color: #DDD;
         border-radius: 0; }
         div.layout > header .search input:-webkit-autofill {
           -webkit-box-shadow: 0 0 0 50px #1a1a1a inset;
-          -webkit-text-fill-color: #dddddd; }
+          -webkit-text-fill-color: #DDD; }
   div.layout > aside,
   div.layout > .main {
     top: 4em; }
@@ -1338,9 +1351,9 @@ div.layout {
         div.layout > aside .modules li:hover {
           cursor: pointer;
           background: #666666;
-          color: white; }
+          color: #fff; }
         div.layout > aside .modules li.active {
-          background: black;
+          background: #000;
           color: #049cdb; }
         div.layout > aside .modules li i.reporter:before {
           content: '\f0f6'; }
@@ -1356,7 +1369,7 @@ div.layout {
           right: .3em;
           padding: 0 .5em;
           background: #a52b1f;
-          color: white;
+          color: #fff;
           border-radius: 0.3em;
           font-size: .4em; }
     div.layout > aside .sections li {
@@ -1374,7 +1387,7 @@ div.layout {
         display: table;
         clear: both; }
       div.layout > aside .sections li:hover, div.layout > aside .sections li.active {
-        color: white;
+        color: #fff;
         background-color: #666666; }
       div.layout > aside .sections li:hover {
         cursor: pointer;
@@ -1387,7 +1400,7 @@ div.layout {
         right: .3em;
         padding: 0 .5em;
         background: #a52b1f;
-        color: white;
+        color: #fff;
         border-radius: 0.3em;
         font-size: .9em; }
     div.layout > aside h1 {
@@ -1412,17 +1425,17 @@ footer.feedback {
   footer.feedback span {
     font-size: 1.2em; }
   footer.feedback.error {
-    background-color: #d94637;
+    background-color: #c22b1c;
     color: #e6e6e6; }
   footer.feedback.success {
     background-color: #87b848;
     color: #e6e6e6; }
   footer.feedback.alert {
-    background-color: #ff9900;
+    background-color: #f90;
     color: #e6e6e6; }
   footer.feedback.notice {
     background-color: #ffc40d;
-    color: #333333; }
+    color: #333; }
   footer.feedback i {
     opacity: .75;
     font-size: 1.8em;
@@ -1493,7 +1506,7 @@ footer.feedback {
     margin-top: 2px; }
     .main-content-list li.cl > div:hover {
       background: #049cdb;
-      color: white; }
+      color: #fff; }
     .main-content-list li.cl > div > div.title {
       float: left; }
       .main-content-list li.cl > div > div.title > i {
@@ -1521,7 +1534,7 @@ footer.feedback {
       .main-content-list > li.cl > div.active, .main-content-list > li.cl > div:hover {
         background: #049cdb; }
         .main-content-list > li.cl > div.active > div.title > .radial-progress .circle .mask .fill, .main-content-list > li.cl > div:hover > div.title > .radial-progress .circle .mask .fill {
-          background: white; }
+          background: #fff; }
         .main-content-list > li.cl > div.active > div.title > .radial-progress .inset, .main-content-list > li.cl > div:hover > div.title > .radial-progress .inset {
           background: #049cdb; }
       .main-content-list > li.cl > div button,
@@ -1558,6 +1571,8 @@ footer.feedback {
           background: #d0d0d0;
           margin-left: 0.25em;
           margin-top: 0.25em; }
+        .main-content-list > li.cl > div > div.title > .radial-progress .inset[data-highlight="failed"] {
+          background: #c22b1c; }
       .main-content-list > li.cl > div > div.title > span,
       .main-content-list > li.cl > div > div.actions > span {
         font-size: 1.333em;
@@ -1641,14 +1656,14 @@ footer.feedback {
   .top-filter.active,
   .main-content-list li.cl > div.active {
     background: #049cdb;
-    color: white; }
+    color: #fff; }
     .top-filter.active .select > button,
     .main-content-list li.cl > div.active .select > button {
       background: none;
-      border: white 2px solid; }
+      border: #fff 2px solid; }
       .top-filter.active .select > button span,
       .main-content-list li.cl > div.active .select > button span {
-        color: white; }
+        color: #fff; }
     .top-filter.active .actions,
     .main-content-list li.cl > div.active .actions {
       opacity: 1;
@@ -1656,7 +1671,7 @@ footer.feedback {
       overflow: visible; }
     .top-filter.active .comments > span,
     .main-content-list li.cl > div.active .comments > span {
-      color: white; }
+      color: #fff; }
   .top-filter > div > button span,
   .top-filter > div .select > button span,
   .main-content-list li.cl > div > div > button span,
@@ -1664,13 +1679,13 @@ footer.feedback {
     line-height: 1.5em; }
   .top-filter > div > button,
   .main-content-list li.cl > div > div > button {
-    background: #333333;
+    background: #333;
     border: none;
     padding: 0.25em 1em; }
   .top-filter > div .select > button,
   .main-content-list li.cl > div > div .select > button {
-    background: #dddddd;
-    border: #dddddd 2px solid;
+    background: #DDD;
+    border: #DDD 2px solid;
     padding: 0.25em 0.5em; }
     .top-filter > div .select > button span,
     .main-content-list li.cl > div > div .select > button span {
@@ -1683,7 +1698,7 @@ footer.feedback {
   position: relative; }
   .select > button {
     text-align: left;
-    border: #dddddd 2px solid;
+    border: #DDD 2px solid;
     position: relative; }
     .select > button.active span {
       min-width: 10em; }
@@ -1709,7 +1724,7 @@ footer.feedback {
     font-size: 1.1em;
     left: 0;
     top: 2.67273em;
-    background: white;
+    background: #fff;
     width: 100%;
     padding: 0.4em 0;
     border: #c4c4c4 0.1em solid;
@@ -1738,7 +1753,7 @@ footer.feedback {
           position: absolute;
           right: 1em; }
       .select .select-dropdown li.placeholder {
-        border-bottom: #dddddd 1px dashed; }
+        border-bottom: #DDD 1px dashed; }
     .select .select-dropdown button {
       background: none;
       color: #666666;
@@ -1768,7 +1783,7 @@ footer.feedback {
 input[type="submit"].primary,
 button.primary {
   background-color: #049cdb;
-  color: white; }
+  color: #fff; }
   input[type="submit"].primary:hover,
   button.primary:hover {
     background-color: #0378a9;
@@ -1784,23 +1799,23 @@ button:disabled {
   animation: spin 1.4s infinite linear; }
 
 input.ng-invalid {
-  border-color: #d94637;
-  background-color: #fef9f8;
-  box-shadow: inset 0 1px 8px #f2bdb8, 0 0 8px #f2bdb8; }
+  border-color: #c22b1c;
+  background-color: #f8d0cc;
+  box-shadow: inset 0 1px 8px #ee9289, 0 0 8px #ee9289; }
 
 .error-feedback {
   display: block;
   padding: .5em;
-  background-color: #d94637;
-  border-radius: 0.1875em;
+  background-color: #c22b1c;
+  border-radius: 3px;
   color: #e6e6e6; }
 
 .notice-feedback {
   display: block;
   padding: .5em;
   background-color: #ffc40d;
-  border-radius: 0.1875em;
-  color: #333333; }
+  border-radius: 3px;
+  color: #333; }
 
 .select button {
   border-radius: .45em; }
@@ -1809,7 +1824,7 @@ input.ng-invalid {
 .select .select-dropdown {
   border-radius: .3em;
   position: absolute;
-  background: white;
+  background: #fff;
   border: 0.1em solid #c4c4c4; }
   .select .select-dropdown:after, .select .select-dropdown:before {
     bottom: 100%;
@@ -1821,7 +1836,7 @@ input.ng-invalid {
     pointer-events: none; }
   .select .select-dropdown:after {
     border-color: rgba(119, 100, 213, 0);
-    border-bottom-color: white;
+    border-bottom-color: #fff;
     border-width: 0.5em;
     left: 50%;
     margin-left: -0.5em;
@@ -1840,12 +1855,12 @@ input.ng-invalid {
 
 button {
   background-color: #049cdb;
-  color: white; }
+  color: #fff; }
   button:hover {
     background-color: #0378a9;
     color: #e6e6e6; }
   button.secondary {
-    background-color: #333333; }
+    background-color: #333; }
     button.secondary:hover {
       background-color: #1a1a1a; }
 
@@ -2071,53 +2086,43 @@ input.ng-invalid {
 
 @keyframes badge {
   0%,
-  20%,
-  40%,
-  60%,
-  80%,
-  100% {
+    20%,
+    40%,
+    60%,
+    80%,
+    100% {
     transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1); }
-
   0% {
     transform: scale3d(0.3, 0.3, 0.3); }
-
   20% {
     transform: scale3d(1.2, 1.2, 1.2); }
-
   40% {
     transform: scale3d(0.9, 0.9, 0.9); }
-
   60% {
     transform: scale3d(1.1, 1.1, 1.1); }
-
   80% {
     transform: scale3d(0.95, 0.95, 0.95); }
-
   100% {
     transform: scale3d(1, 1, 1); } }
 @keyframes feedback {
   0%,
-  40%,
-  80%,
-  100% {
+    40%,
+    80%,
+    100% {
     transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1); }
-
   0% {
     transform: scaleY(0.3);
     bottom: -3.5em; }
-
   20% {
     transform: scaleY(1.2);
     bottom: -0.35em; }
-
   40% {
     transform: scaleY(1); }
-
   60% {
     transform: scaleY(1.1); }
-
   80% {
     transform: scaleY(0.98); }
-
   100% {
     transform: scaleY(1); } }
+
+/*# sourceMappingURL=main.css.map */
