--- a/app/views/directives/radial-progress.html
+++ b/app/views/directives/radial-progress.html
@@ -7,4 +7,4 @@
         <div class="fill fix"></div>
     </div>
 </div>
-<div class="inset"></div>
+<div class="inset" data-highlight="{{highlight}}"></div>
