--- a/app/views/runner/available.html
+++ b/app/views/runner/available.html
@@ -1,12 +1,12 @@
 <div class="top-filter ic ng-hide filter-2" ng-show="filter.loaded" ng-class="{'active':available.selectedItem === null}" ng-click="available.selectedItem = null" ng-controller="AvailableFilterCtrl as filter">
     <i class="fa fa-bars" ng-click="available.expander.toggleAll()"></i>
     <div class="filters">
-        <i class="fa fa-folder-open-o" ng-class="{'inactive':!available.filter.set.keys.length}" ng-click="filter.expand.set = !filter.expand.set"></i>
-        <span translate="RUNNER.AVAILABLE.FILTER.BEFORE_SET" ng-hide="!available.filter.set.keys.length && !filter.expand.set"></span>
-        <div class="select" filter-select="filter.sets" filter-id="available.filter.set.id" placeholder="filter.setPlaceholder" ng-hide="!filter.expand.set" max-items="{{available.maxSelectItems}}"></div>
-        <i class="fa fa-tag" ng-class="{'inactive':!available.filter.tag.keys.length}" ng-click="filter.expand.tag = !filter.expand.tag"></i>
-        <span translate="RUNNER.AVAILABLE.FILTER.BEFORE_TAG" ng-hide="!available.filter.tag.keys.length && !filter.expand.tag"></span>
-        <div class="select" filter-select="filter.tags" filter-id="available.filter.tag.id" placeholder="filter.tagPlaceholder" multiple="true" ng-hide="!filter.expand.tag" max-items="{{available.maxSelectItems}}"></div>
+        <i class="fa fa-folder-open-o" ng-class="{'inactive':!available.filter.set.ids.length}" ng-click="filter.expand.set = !filter.expand.set"></i>
+        <span translate="RUNNER.AVAILABLE.FILTER.BEFORE_SET" ng-hide="!available.filter.set.ids.length && !filter.expand.set"></span>
+        <div class="select" filter-select="filter.sets" filter-id="available.filter.set.id" placeholder="filter.setPlaceholder" default="filter.setsDefault" ng-hide="!filter.expand.set" max-items="{{available.maxSelectItems}}"></div>
+        <i class="fa fa-tag" ng-class="{'inactive':!available.filter.tag.ids.length}" ng-click="filter.expand.tag = !filter.expand.tag"></i>
+        <span translate="RUNNER.AVAILABLE.FILTER.BEFORE_TAG" ng-hide="!available.filter.tag.ids.length && !filter.expand.tag"></span>
+        <div class="select" filter-select="filter.tags" filter-id="available.filter.tag.id" placeholder="filter.tagPlaceholder" multiple="true" default="filter.tagsDefault" ng-hide="!filter.expand.tag" max-items="{{available.maxSelectItems}}"></div>
     </div>
     <div class="actions">
         <button ng-click="available.run('all')">
