Simplify running story info and remove markdown and pluralization overhead

--- a/app/sass/components/modules/content-filter-list-headers.scss
+++ b/app/sass/components/modules/content-filter-list-headers.scss
@@ -42,6 +42,10 @@
 
         .comments > span {
             color: $highlight-color;
+
+            &.highlight {
+                color: $highlight-color;
+            }
         }
     }
 
