--- a/app/sass/theme/variables.scss
+++ b/app/sass/theme/variables.scss
@@ -135,3 +135,7 @@ $content-list-item-3-bg-color:          lighten($section-header-bg-color, 20%);
 $content-list-3-bg-color:               $content-list-item-1-bg-color;
 
 $run-failed-color:                      $light-red;
+
+$tooltip-bg-color:                      $dark-gray;
+$tooltip-color:                         $highlight-color;
+$tooltip-border-radius:                 .3em;
