--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -20,6 +20,7 @@
 @import 'components/modules/content-list';
 @import 'components/modules/content-filter-list-headers';
 @import 'components/modules/select';
+@import 'components/modules/tooltip';
 @import 'components/modules/hero-notice';
 @import 'components/modules/pagination';
 // finally enhance the components with some theme magic
