Add a socket run simulator and fix an issue with scenario completed counts (tests failing)

--- a/app/sass/components/modules/content-list.scss
+++ b/app/sass/components/modules/content-list.scss
@@ -132,6 +132,10 @@
                 .inset[data-highlight="failed"] {
                     background: $run-failed-color;
                 }
+
+                .inset[data-highlight="success"] {
+                    background: $run-success-color;
+                }
             }
 
             > div.title > span,
@@ -228,6 +232,10 @@
 
                         .inset[data-highlight="failed"] {
                             background: $run-failed-color;
+                        }
+
+                        .inset[data-highlight="success"] {
+                            background: $run-success-color;
                         }
                     }
                 }
